updated few essentials

--- a/Book.Borrow.Project/appsettings.json
+++ b/Book.Borrow.Project/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=IN-PG03520E;Database=BookDb;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=<your_server>;Database=<your_db_name>;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=true;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
